syntax = "proto3";

package datacollector;

import "github.com/brotherlogic/goserver/proto/server.proto";

message ReadSpec {
  string measure_key = 1;
  string job_name = 2; // Optional
}

message ReadConfig {
  repeated ReadSpec spec = 1;
}

message Config {
  repeated DataSet data = 1;
}

message Reading {
  int64 timestamp = 1;
  goserver.State measure = 2;
}

message DataSet {
  string job_name = 1;
  string identifier = 2;
  repeated Reading readings = 3;
}
